r1491/sofa-dev : FIX missing files in doc/ included design in the main documentation. Added a kile project file to design/, in order to edit it more easily than with a standard text editor.

--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,11pt]{article}
-\include{macros_docu} % This file is in parent directory. Your TEXINPUTS environment variable must include .. to reach this file. Example: setenv TEXINPUTS ..:../..:${TEXINPUTS}
+\input{macros_docu} % This file is in parent directory. Your TEXINPUTS environment variable must include .. to reach this file. Example: setenv TEXINPUTS ..:../..:${TEXINPUTS}
 
 % ---- format de page A4
 	\setlength{\textwidth }{16cm}	% largeur de ligne
